--- a/css/slider.css
+++ b/css/slider.css
@@ -18,27 +18,15 @@
 
 .slide_container {
   margin: auto;
-  width: 60%;
   overflow: hidden;
   position: relative;
+  max-width: 100%;
 }
 
 .slides {
   display: flex;
   width: 100%;
   height: 600px;
-}
-
-.country {
-  color: #f2f2f2;
-  font-size: 20px;
-  position: absolute;
-  bottom: 0;
-  padding: 10px;
-}
-
-.image {
-  max-width: 100%;
 }
 
 .active {
@@ -48,23 +36,48 @@
   opacity: 1;
 }
 
+.slideshow_container {
+  margin: auto;
+  position: relative;
+  background-color: #e5e8e0;
+  padding: 30px;
+  width: 65%;
+}
+
+.close_update_buttons {
+  text-align: center;
+  height: 20px;
+  margin-bottom: 30px;
+}
+
+#closebtn {
+  position: absolute;
+  font-size: 30px;
+  right: 4%;
+  z-index: 10;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
 #updateBtn {
   position: absolute;
-  font-size: 50px;
-  right: 5%;
-  z-index: 1;
+  font-size: 30px;
+  right: 8%;
+  z-index: 10;
   cursor: pointer;
+  opacity: 0.5;
 }
 
-#closeBtn {
-  position: absolute;
-  font-size: 50px;
-  right: 5%;
-  z-index: 1;
-  color: white;
-  cursor: pointer;
-}
+@media screen and (max-width: 760px) {
+  #updateBtn {
+    right: 20%;
+  }
 
+  .slideshow_container {
+    padding: 0;
+    width: 100%;
+  }
+}
 #prevBtn {
   position: absolute;
   top: 50%;
@@ -95,6 +108,7 @@
 }
 .thumb_img_list img {
   display: block;
+  max-width: 100%;
 }
 
 /*# sourceMappingURL=slider.css.map */
