--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -19,27 +19,16 @@
 
 .slide_container {
 	margin: auto;
-	width: 60%;
 	overflow: hidden;
 	position: relative;
+	max-width: 100%;
+
 }
 
 .slides {
 	display: flex;
 	width: 100%;
 	height: 600px;
-}
-
-.country {
-	color: #f2f2f2;
-	font-size: 20px;
-	position: absolute;
-	bottom: 0;
-	padding: 10px;
-}
-
-.image {
-	max-width: 100%;
 }
 
 .active {
@@ -50,21 +39,48 @@
 	}
 }
 
-#updateBtn {
-	position: absolute;
-	font-size: 50px;
-	right: 5%;
-	z-index: 1;
-	cursor: pointer;
+.slideshow_container {
+	margin: auto;
+	position: relative;
+	background-color: #e5e8e0;
+	padding: 30px;
+	width: 65%;
+
 }
 
-#closeBtn {
+.close_update_buttons {
+	text-align: center;
+	height: 20px;
+	margin-bottom: 30px;
+}
+
+#closebtn {
     position: absolute;
-	font-size: 50px;
-	right: 5%;
-	z-index: 1;
-	color: white;
+	font-size: 30px;
+	right: 4%;
+	z-index: 10;
 	cursor: pointer;
+	opacity: 0.5;
+}
+
+#updateBtn {
+	position: absolute;
+	font-size: 30px;
+	right: 8%;
+	z-index: 10;
+	cursor: pointer;
+	opacity: 0.5;
+}
+
+@media screen and (max-width: 760px) {
+	#updateBtn {
+		right: 20%;
+	}
+    
+    .slideshow_container {
+    	padding: 0;
+    	width: 100%;
+    }
 }
 
 #prevBtn {
@@ -100,6 +116,7 @@
 
 	img {
 		display: block;
+		max-width: 100%;
 	}
 }
 
