--- a/css/slider.css
+++ b/css/slider.css
@@ -7,26 +7,15 @@
   width: 80%;
 }
 .thumb_container img {
-  height: 120px;
+  height: 140px;
+  max-width: 100%;
+  padding: 10px;
 }
 
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
-}
-
-.slide_container {
-  margin: auto;
-  overflow: hidden;
-  position: relative;
-  max-width: 100%;
-}
-
-.slides {
-  display: flex;
-  width: 100%;
-  height: 600px;
 }
 
 .active {
@@ -42,12 +31,14 @@
   background-color: #e5e8e0;
   padding: 30px;
   width: 65%;
+  display: none;
 }
 
-.close_update_buttons {
+.close_btn_container {
   text-align: center;
   height: 20px;
   margin-bottom: 30px;
+  display: none;
 }
 
 #closebtn {
@@ -59,25 +50,14 @@
   opacity: 0.5;
 }
 
-#updateBtn {
-  position: absolute;
-  font-size: 30px;
-  right: 8%;
-  z-index: 10;
-  cursor: pointer;
-  opacity: 0.5;
+.slide_container {
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  max-width: 100%;
+  display: none;
 }
 
-@media screen and (max-width: 760px) {
-  #updateBtn {
-    right: 20%;
-  }
-
-  .slideshow_container {
-    padding: 0;
-    width: 100%;
-  }
-}
 #prevBtn {
   position: absolute;
   top: 50%;
@@ -98,17 +78,17 @@
   cursor: pointer;
 }
 
-.thumb_img_list ul {
-  list-style: none;
-  float: left;
-}
-.thumb_img_list li {
-  display: inline-block;
-  margin: 10px;
-}
-.thumb_img_list img {
-  display: block;
+.slides {
+  display: flex;
   max-width: 100%;
+  height: 600px;
+}
+
+@media screen and (max-width: 760px) {
+  .slideshow_container {
+    padding: 0;
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=slider.css.map */
