--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -7,7 +7,9 @@
 	width: 80%;
     
     img {
-    	height: 120px;
+    	height: 140px;
+    	max-width: 100%;
+    	padding: 10px;	
     }
 }
 
@@ -15,20 +17,6 @@
     content: "";
     clear: both;
     display: table;
-}
-
-.slide_container {
-	margin: auto;
-	overflow: hidden;
-	position: relative;
-	max-width: 100%;
-
-}
-
-.slides {
-	display: flex;
-	width: 100%;
-	height: 600px;
 }
 
 .active {
@@ -45,13 +33,15 @@
 	background-color: #e5e8e0;
 	padding: 30px;
 	width: 65%;
+	    display: none;
 
 }
 
-.close_update_buttons {
+.close_btn_container {
 	text-align: center;
 	height: 20px;
 	margin-bottom: 30px;
+    display: none;
 }
 
 #closebtn {
@@ -63,24 +53,12 @@
 	opacity: 0.5;
 }
 
-#updateBtn {
-	position: absolute;
-	font-size: 30px;
-	right: 8%;
-	z-index: 10;
-	cursor: pointer;
-	opacity: 0.5;
-}
-
-@media screen and (max-width: 760px) {
-	#updateBtn {
-		right: 20%;
-	}
-    
-    .slideshow_container {
-    	padding: 0;
-    	width: 100%;
-    }
+.slide_container {
+	margin: auto;
+	overflow: hidden;
+	position: relative;
+	max-width: 100%;
+    display: none;
 }
 
 #prevBtn {
@@ -103,20 +81,16 @@
 	cursor: pointer;
 }
 
-.thumb_img_list {
-	ul {
-		list-style: none;
-		float: left;
-	}
+.slides {
+	display: flex;
+	max-width: 100%;
+	height: 600px;
+}
 
-	li {
-		display: inline-block;
-		margin: 10px;
-	}
-
-	img {
-		display: block;
-		max-width: 100%;
-	}
+@media screen and (max-width: 760px) {
+    .slideshow_container {
+    	padding: 0;
+    	width: 100%;
+    }
 }
 
