--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -10,6 +10,13 @@
     	height: 140px;
     	max-width: 100%;
     	padding: 10px;	
+
+    	opacity: 0.9;
+
+		&:hover {
+			opacity: 1;
+			transform: scale(0.95);
+		}
     }
 }
 
@@ -19,29 +26,31 @@
     display: table;
 }
 
-.active {
-	opacity: 0.9;
-
-	&:hover {
-		opacity: 1;
-	}
-}
-
 .slideshow_container {
 	margin: auto;
-	position: relative;
-	background-color: #e5e8e0;
+	position: fixed;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
 	padding: 30px;
-	width: 65%;
-	    display: none;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	overflow: auto;
+	opacity: 0;
+	pointer-events: none;
+}
 
+.slideshow_container.appear {
+	opacity: 1;
+	pointer-events: all;
 }
 
 .close_btn_container {
 	text-align: center;
 	height: 20px;
 	margin-bottom: 30px;
-    display: none;
 }
 
 #closebtn {
@@ -50,15 +59,16 @@
 	right: 4%;
 	z-index: 10;
 	cursor: pointer;
-	opacity: 0.5;
 }
 
 .slide_container {
-	margin: auto;
-	overflow: hidden;
-	position: relative;
 	max-width: 100%;
-    display: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #prevBtn {
@@ -85,6 +95,11 @@
 	display: flex;
 	max-width: 100%;
 	height: 600px;
+
+	img {
+		cursor: pointer;
+		max-width: 100%;
+	}
 }
 
 @media screen and (max-width: 760px) {
@@ -94,3 +109,18 @@
     }
 }
 
+body {
+	justify-content: center;
+	align-items: center;
+}
+
+#mainImg {
+    max-width: 100%;
+    height: 100%;
+    margin: auto;
+}
+
+#imgTxt {
+	padding: 10px;
+    font-size: 30px;
+}
